# otus-homework-c

./: CMakeLists.txt  Makefile  main.cpp
.github/workflows/: build.yml  release.yml
1/: helloworld.cpp
package/DEBIAN/: control
